# discovery-sandbox

./: .gitignore  LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: pull-request.yml
src/inference/: discovery_inference.py  discovery_sandbox.py
src/sandbox/: discovery_sandbox.py
test/: test_discovery_inference.py  test_discovery_sandbox.py
tutorials/pdf-chatbot/: README.md  chunker.py  main.py  pdp_sdk.py
tutorials/search/: README.md  dataset.json  main.py  mappings.json  pdp_sdk.py  setup_index.py
