# Copyright (c) 2025 Pureinsights Technology Ltd. All rights reserved.
#
# Permission to use, copy, modify or distribute this software and its
# documentation for any purpose is subject to a licensing agreement with
# Pureinsights Technology Ltd.
#
# All information contained within this file is the property of
# Pureinsights Technology Ltd. The distribution or reproduction of this
# file or any information contained within is strictly forbidden unless
# prior written permission has been granted by Pureinsights Technology Ltd.

[project]
name = "discovery_inference"
dynamic = ["version"]
dependencies = [
    "httpx",
    "multimethod",
]

[project.optional-dependencies]
dev = [
    "mockito",
    "pytest"
]