# Copyright (c) 2025 Pureinsights Technology Ltd. All rights reserved.
#
# Permission to use, copy, modify or distribute this software and its
# documentation for any purpose is subject to a licensing agreement with
# Pureinsights Technology Ltd.
#
# All information contained within this file is the property of
# Pureinsights Technology Ltd. The distribution or reproduction of this
# file or any information contained within is strictly forbidden unless
# prior written permission has been granted by Pureinsights Technology Ltd.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discovery_inference"
version = "0.0.1"
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"} 
dependencies = [
    "httpx",
    "multimethod"
]

[project.optional-dependencies]
dev = [
    "mockito",
    "pytest",
    "pytest-cov"
]