[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discovery_sandbox"
version = "0.4.0"
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "httpx",
    "multimethod"
]

[project.optional-dependencies]
dev = [
    "mockito",
    "pytest",
    "pytest-cov"
]
